--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,8 @@ body {
   padding-right:0;
   padding-left:0;
   margin-right:auto;
-  margin-left:auto
+  margin-left:auto;
+  min-height: 1000px;
 }
 
 .carousel-caption {
