--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,15 @@ body {
 
 #welcomeSection > div > h1 {
   font-size: 5em;
-  padding-bottom: 2vh;
   color: #292b2c;
 }
 
 h2 {
   font-size: 2em;
+}
+
+#bio {
+  color: #292b2c;
 }
 
 .skills {
@@ -21,6 +24,17 @@ h2 {
   font-size: 3em;
   grid-column-gap: 0.25em;
   grid-row-gap: 0.5em;
+}
+
+#scrollHint {
+  position: fixed;
+  color: #292b2c;
+  left: 0;
+  right: 0;
+  font-size: 3em;
+  min-height: 10vh;
+  width: 100%;
+  padding-top: 1%;
 }
 
 section {
@@ -37,26 +51,6 @@ section {
 
 section .project-wrapper {
   padding: 3em 2em 3em 2em;
-}
-
-section[data-color="#cbf1f6"] {
-  color: #cbf1f6;
-  background-color: #cbf1f6;
-}
-
-section[data-color="#f6d7cb"] {
-  color: #f6d7cb;
-  background-color: #f6d7cb;
-}
-
-section[data-color="#f6edcb"] {
-  color: #f6edcb;
-  background-color: #f6edcb;
-}
-
-section[data-color="#e2cbf6"] {
-  color: #e2cbf6;
-  background-color: #e2cbf6;
 }
 
 h3 {
@@ -143,4 +137,14 @@ button {
 button:focus {
   outline: none;
   border: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
 }
