--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,20 @@ section {
   margin-left:auto;
 } 
 
+.link-caption {
+  font-size: 0.75em;
+}
+
 section .project-wrapper {
   padding: 3em 2em 3em 2em;
+}
+
+.project-wrapper > div > ul {
+  margin-bottom: 2em;
+}
+
+.project-wrapper ul {
+  margin-left: -1em;
 }
 
 h3 {
@@ -69,10 +81,6 @@ iframe {
   width: 100%;
   height: 100%;
   border: none;
-}
-
-.project-wrapper > div > ul {
-  margin-bottom: 2em;
 }
 
 #portfolioCarousel > div > .carousel-item {
@@ -101,10 +109,6 @@ iframe {
   outline: black;
   background-size: 100%, 100%;
   filter: invert(100%);
-}
-
-.project-wrapper ul {
-  margin-left: -1em;
 }
 
 div .md-textarea {
